adicionado endpoint para tipos de dados das tabelas
