# api/app/rest/routes.py
@@ -2,7 +2,7 @@
 """rest_routes.
    """
 
-from .resources import data_atual, files_parquet, swagger
+from .resources import data_atual, files, data_types, swagger
 from . import blueprint
 
 
@@ -10,5 +10,5 @@ def init_routes(config):
    blueprint.add_url_rule('/', 'swagger', swagger, methods=['GET'])
    blueprint.add_url_rule('/data_atual', 'data_atual', data_atual, methods=['GET'])
    blueprint.add_url_rule(f'/{config["DATA_ENDPOINT"]}/<fileType>/<tableName>', 
-                            config["DATA_ENDPOINT"], files_parquet, methods=['GET'])
-
+                            config["DATA_ENDPOINT"], files, methods=['GET'])
+   blueprint.add_url_rule(f'/types/<tableName>', 'types', data_types, methods=['GET'])
